<resources>
    <string name="app_name">BebaAgua</string>
    <string name="one_minute">1 minute</string>
    <string name="two_minutes">2 minutes</string>
    <string name="five_minutes">5 minutes</string>
    <string name="title">Reminder to drink water</string>

    <!--Bottom Navigation Menu-->
    <string name="navigation_news">News</string>
    <string name="navigation_settings">Settings</string>

    <string name="hello_blank_fragment">Fragment1</string>
    <string name="never">Never</string>

    <!--Login Activity-->
    <string name="save_settings">Save settings?</string>
    <string name="login">Login</string>
    <string name="what_is_your_name">What\'s your name?</string>

    <string-array name="entries">
        <item>Always</item>
        <item>5 minutes</item>
    </string-array>
</resources>